<resources>
    <string name="app_name">INSA Radar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="login" translatable="false">Se connecter</string>
    <string name="email" translatable="false">Email</string>
    <string name="password" translatable="false">Mot de passe</string>
    <string name="register" translatable="false">Créer un compte</string>
    <string name="already_registered" translatable="false">Déjà inscrit? Cliquez ici !</string>
    <string name="logout" translatable="false">Se déconnecter</string>
    <string name="username" translatable="false">Nom d\'utilisateur</string>
    <string name="info" translatable="false">Veuillez choisir un bâtiment:</string>
    <string name="building_name" translatable="false">Batiment</string>
    <string name="room_name" translatable="false">C1.10</string>
    <string name="room_availability" translatable="false">Disponible jusqu\'à 17:30</string>
    <string name="room_description" translatable="false">36 places</string>
    <string name="reserve" translatable="false">Réserver</string>
</resources>