<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".Registration">

<TextView
    android:id="@+id/register_title"
    android:text="@string/register"
    android:textSize="25sp"
    android:textStyle="bold"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="200dp"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    />

<com.google.android.material.textfield.TextInputLayout
    android:id="@+id/email_input_layout"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="32dp"
    app:layout_constraintTop_toBottomOf="@id/register_title"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:hint="@string/email"/>
</com.google.android.material.textfield.TextInputLayout>

<com.google.android.material.textfield.TextInputLayout
    android:id="@+id/password_input_layout"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    app:layout_constraintTop_toBottomOf="@id/email_input_layout"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:hint="@string/password"
        android:inputType="textPassword"/>
</com.google.android.material.textfield.TextInputLayout>

<ProgressBar
    android:id="@+id/progressBar"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:visibility="gone"
    android:layout_marginTop="16dp"
    app:layout_constraintTop_toBottomOf="@id/password_input_layout"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"/>

<Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/register"
    android:id="@+id/btn_register"
    android:layout_marginTop="16dp"
    app:layout_constraintTop_toBottomOf="@id/progressBar"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"/>

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/already_registered"
    android:id="@+id/loginNow"
    android:gravity="center"
    android:layout_marginTop="20dp"
    android:textStyle="bold"
    android:textSize="20sp"
    app:layout_constraintTop_toBottomOf="@id/btn_register"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"/>

<ImageButton
    android:id="@+id/imageButton"
    android:layout_width="32dp"
    android:layout_height="32dp"
    android:layout_margin="6dp"
    android:layout_marginTop="6dp"
    android:layout_marginEnd="6dp"
    android:background="@android:color/transparent"
    android:contentDescription="Close Button"
    android:scaleType="fitCenter"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:srcCompat="@drawable/close" />

</androidx.constraintlayout.widget.ConstraintLayout>